[package]
name = "yuris_decomp"
version = "0.1.0"
edition = "2021"

[lib]
name = "yuris_decomp"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "yuris_decomp"
path = "src/main.rs"

[dependencies]
thiserror = "2"
encoding_rs = "0.8"
murmur2 = "0.1"
crc32fast = "1"
flate2 = "1"
libc = "0.2"

[dev-dependencies]
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
wasm = []
